# csp-2017-final-project

./: README.md
csp_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
csp_ws/devel/include/duckietown_msgs/: AntiInstagramHealth.h  AntiInstagramTransform.h  AprilTagDetection.h  AprilTagDetectionArray.h  AprilTagsWithInfos.h  BoolStamped.h  CarControl.h  CoordinationClearance.h  CoordinationSignal.h  DuckieSensor.h  FSMState.h  KinematicsParameters.h  KinematicsWeights.h  LEDDetection.h  LEDDetectionArray.h  LEDDetectionDebugInfo.h  LEDInterpreter.h  LanePose.h  ObstacleImageDetection.h  ObstacleImageDetectionList.h  ObstacleProjectedDetection.h  ObstacleProjectedDetectionList.h  ObstacleType.h  Pixel.h  Pose2DStamped.h  Rect.h  Rects.h  SceneSegments.h  Segment.h  SegmentList.h  SetFSMStateRequest.h  SetFSMStateResponse.h  SetValueRequest.h  SetValueResponse.h  SignalsDetection.h  SourceTargetNodes.h  StopLineReading.h  TagInfo.h  ThetaDotSample.h  Trajectory.h  (+7 more)
csp_ws/devel/share/common-lisp/ros/duckietown_msgs/msg/: _package.lisp  duckietown_msgs-msg.asd
csp_ws/devel/share/common-lisp/ros/duckietown_msgs/srv/: SetFSMState.lisp
csp_ws/devel/share/customized_lane_controller/cmake/: customized_lane_controllerConfig.cmake
csp_ws/devel/share/duckietown_msgs/cmake/: duckietown_msgs-msg-extras.cmake  duckietown_msgs-msg-paths.cmake  duckietown_msgsConfig.cmake
csp_ws/devel/share/guard/cmake/: guardConfig.cmake
csp_ws/devel/share/notification/cmake/: notificationConfig.cmake
csp_ws/devel/share/object_following/cmake/: object_followingConfig.cmake
csp_ws/devel/share/object_recognition/cmake/: object_recognitionConfig.cmake
csp_ws/src/customized_lane_controller/: CMakeLists.txt  package.xml
csp_ws/src/guard/: CMakeLists.txt  package.xml
csp_ws/src/guard/src/: guard_node.py
csp_ws/src/notification/: CMakeLists.txt  package.xml
csp_ws/src/notification/src/: notification_node.py
csp_ws/src/object_following/: CMakeLists.txt  package.xml
csp_ws/src/object_recognition/: CMakeLists.txt  package.xml
