<?xml version="1.0"?>
<package format="2">
  <name>notification</name>
  <version>1.0.0</version>
  <description>The notification package. This package contains a node being the network manager of DuckieGuard</description>
  <maintainer email="w86763777@gmail.com">Yi-Lun Wu</maintainer>
  <author email="w86763777@gmail.com">Yi-Lun Wu</author>
  <license>GPLv3</license>
    
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>duckietown_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <!-- Empty -->
  </export>
</package>
