<?xml version="1.0"?>
<package format="2">
  <name>object_following</name>
  <version>0.0.0</version>
  <description>The object_following package</description>
  <maintainer email="robotvision@todo.todo">robotvision</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>duckietown_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
